# v8-ctf-challenges

infoseciitr2024/pwn/V8box/: args.gn  getflag  pwn.js  script.py  vuln.patch
infoseciitr2024/pwn/V8box/intended_way/: README.md
infoseciitr2024/pwn/V8box/my_shitty_unintended_way/: README.md  pwn.js  script.py
