is_component_build = false
is_debug = false
target_cpu = "x64"
v8_enable_sandbox = true

v8_enable_backtrace = true
v8_enable_disassembler = true
v8_enable_object_print = true
v8_enable_verify_heap = true

v8_enable_memory_corruption_api = true

v8_jitless = true
v8_enable_webassembly = false
v8_enable_sparkplug = false
v8_enable_maglev = false
v8_enable_turbofan = false